<!--
  ~ Copyright (C) 2018 Sneyder Angulo.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">SD Messages</string>
  <string name="home_button_sign_up">Sign up</string>
  <string name="home_button_log_in">Log in</string>
  <string name="register_hint_user_name">User name</string>
  <string name="register_hint_email">Email</string>
  <string name="register_hint_password">Password</string>
  <string name="register_button_sign_up">Sign up</string>
  <string name="register_text_accept_policy">By sign up you accept our <a href="https://sneyder.net/SDMessages/privacyPolicy.html">privacy policy</a> and <a href="http://34.199.104.254/termsofuse.html">terms of use</a></string>
  <string name="register_select_birthday">Birthday</string>
  <string name="register_format_birthday">Birthday: %1$s/%2$s/%3$s</string>
  <string name="register_warning_missing_username">You must enter your username</string>
  <string name="register_warning_missing_email">You must enter a valid email</string>
  <string name="register_warning_missing_password">You must enter a password</string>
  <string name="register_warning_invalid_birthday">You must be at least 18 years old to be able to use this application</string>
  <string name="login_button_login">Log in</string>
  <string name="register_message_error_singing_up">There was an error singing up in the server</string>
  <string name="login_message_error_loggin_in">There was an error logging in the server</string>
  <string name="signup_message_unable_google_login">Unable to login with Google</string>
  <string name="register_add_image_url_dialog_imgurl">Image url</string>
  <string name="register_message_error_taking_photo">There was an error saving the photo in the storage</string>

  <string-array name="register_add_profile_img_options">
    <item>Take photo</item>
    <item>Choose existing image</item>
    <item>Add image url</item>
  </string-array>

  <string-array name="main_title_fragments">
    <item>Chats</item>
    <item>Profile</item>
  </string-array>

  <string-array name="search_title_fragments">
    <item>People</item>
    <item>Groups</item>
  </string-array>

  <string name="facebook_app_id">158152681487301</string>
  <string name="fb_login_protocol_scheme">fb158152681487301</string>
  <string name="server_client_id">434477538698-8ulu0utc36ugu3ob252o5bptt1s52clk.apps.googleusercontent.com</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="main_menu_search">Search</string>
  <string name="chats_message_error_loading_chats">There was an error loading the chats</string>
  <string name="login_warning_invalid_email">You must insert a valid email address</string>
  <string name="login_warning_missing_password">You must insert a valid password</string>
  <string name="groups_message_error_loading_groups">There was an error loading the groups</string>
  <string name="search_people_message_error_loading_people">There was an error searching for people</string>
  <string name="dialog_send_friend_request_hint_message">Message(optional)</string>
  <string name="dialog_send_friend_request_title">Do you want to send a friend request to %s?</string>
  <string name="notification_title_friend_request">You have received a new friend request</string>
  <string name="notification_content_friend_reques">%s wants to connect with you</string>
  <string name="notification_action_accept_friend_request">Accept</string>
  <string name="notification_action_reject_friend_request">Reject</string>
  <string name="dialog_receive_friend_request_title">%s has sent you a friend request</string>
  <string name="dialog_receive_friend_request_accept">Accept</string>
  <string name="dialog_receive_friend_request_reject">Reject</string>
  <string name="conversation_hint_type_message">Type a message</string>
  <string name="conversation_error_sending_message">There was an error sending the message</string>
  <string name="conversation_error_loading_messages">There was an error loading the messages</string>
  <string name="notification_hint_type_reply">Type a message</string>

  <string name="title_activity_view_picture">ViewPictureActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
  <string name="dialog_edit_name_hint_username">Username</string>
  <string name="dialog_edit_name_title">Enter your user name</string>
  <string name="dialog_profile_photo_title">Profile photo</string>
  <string name="dialog_profile_photo_action_gallery">Gallery</string>
  <string name="dialog_profile_photo_action_camera">Camera</string>
  <string name="dialog_profile_photo_action_url">Url</string>
  <string name="main_menu_log_out">Log out</string>
  <string name="main_error_logging_out">There was an error loggin out</string>
  <string name="main_menu_settings">Settings</string>
  <string name="main_menu_new_group">New group</string>
  <string name="new_group_menu_create_group">Create</string>
  <string name="new_group_hint_group_name">Group name</string>
  <string name="new_group_warning_missing_group_name">You must enter a valid group name</string>
  <string name="new_group_message_error_creating_group">There was an error creating the group in the server</string>
  <string name="title_activity_new_group">New group</string>

</resources>
