<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


  <LinearLayout
      android:id="@+id/activity_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      tools:context="com.twismart.barcafansclub.Activities.RegisterActivity">

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center">

      <com.sneyder.sdmessages.utils.CircleImageView
          android:id="@+id/imgProfileImageView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"
          android:adjustViewBounds="true"
          android:src="@mipmap/ic_launcher"/>

      <android.support.design.widget.FloatingActionButton
          android:id="@+id/imgProfileCameraButton"
          android:layout_width="56dp"
          android:layout_height="56dp"
          android:layout_gravity="end|bottom"
          app:backgroundTint="@color/colorPrimary"
          app:srcCompat="@drawable/ic_add_profile_photo"
          android:tint="#fff"
          android:padding="8dp"/>

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/usernameEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:text="Sneyder Angulo"
          android:hint="@string/register_hint_user_name"
          android:maxLength="25"
          android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          tools:text="sneyder2328@gmail.com"
          android:maxLength="55"
          android:hint="@string/register_hint_email"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/passwordEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:maxLength="25"
          tools:text="mypassword"
          android:hint="@string/register_hint_password"/>

    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/birthDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_select_birthday"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="signUp"
        android:text="@string/register_button_sign_up"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/policyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/register_text_accept_policy" />


  </LinearLayout>
</ScrollView>