<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sneyder.sdmessages.ui.login.LogInActivity">

  <android.support.design.widget.TextInputLayout
      android:id="@+id/emailTextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="6dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        tools:text="sneyder2328@gmail.com"
        android:maxLength="55"
        android:hint="@string/register_hint_email" />

  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:id="@+id/passwordTextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
      android:layout_marginTop="14dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:inputType="textPassword"
        android:maxLength="25"
        tools:text="mypassword"
        android:hint="@string/register_hint_password" />

  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/logInButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="logIn"
      android:text="@string/login_button_login"
      android:textSize="19sp"
      android:layout_marginTop="14dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
      app:layout_constraintEnd_toEndOf="parent" />

  <LinearLayout
      android:id="@+id/separatorLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logInButton">

    <View
        android:layout_width="0px"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/orLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="or log in with"/>

    <View
        android:layout_width="0px"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"/>

  </LinearLayout>

  <android.support.constraint.Guideline
      android:id="@+id/guidelineVertical50"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"/>


  <com.facebook.login.widget.LoginButton
      android:id="@+id/logInWithFacebookButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="14dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/separatorLinearLayout"
      app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50" />

  <Button
      android:id="@+id/logInWithGoogleButton"
      android:layout_width="0px"
      android:layout_height="wrap_content"
      android:onClick="logInWithGoogle"
      android:text="Log in with google"
      android:textSize="19sp"
      android:layout_marginTop="14dp"
      app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
      app:layout_constraintTop_toBottomOf="@+id/separatorLinearLayout"
      app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
